# tauri-react

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: action.rs  command.rs  lib.rs
examples/: README.md  craco.config.js  package.json  tailwind.config.js
examples/src/: App.css  App.jsx  index.css  index.jsx
examples/src-tauri/: Cargo.toml  tauri.conf.json
examples/src-tauri/src/: commands.rs  main.rs  state.rs
examples/src/actions/: todo.js
examples/src/components/: button.js  list.js  text-box.js  view.js
examples/src/containers/: clock.js  new-todo.js  todo-list.js
frontend/: package.json
frontend/src/: action.ts  connect.tsx  context.ts  index.ts  store.tsx
