[package]
name = "tauri-react"
description = "Helper libraries (Rust and Typescript/Javascript) for tauri with react frontend"
version = "0.1.0"
authors = ["MarkAtk"]
edition = "2018"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/markatk/tauri-react"
keywords = ["tauri", "react"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "markatk/tauri-react" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
once_cell = "1.5.2"
tauri = { version = "0.10" }
